# DeepScholar

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: AGENT_RULES.md
docs/rules/: evidence_contract.md  state_contract.md  supervisor_rules.md  writer_rules.md
research_agent/: cli.py  graph.py  state.py
research_agent/agents/: analyzer_agent.py  brain_agent.py  critic_agent.py  executor_agent.py  writer_agent.py
research_agent/context/: __init__.py  local_context.py
research_agent/eval/: evaluator.py
research_agent/llm/: router.py
research_agent/memory/: __init__.py  conversation_memory.py  paper_store.py  session_memory.py
research_agent/observability/: langsmith.py  trace_logger.py
research_agent/planning/: __init__.py  heuristics.py
research_agent/prompts/: __init__.py  defaults.py
research_agent/protocols/: __init__.py  rspl.py  sepl.py
research_agent/react/: __init__.py  executor.py  skill_registry.py  tools.py
research_agent/runtime/: __init__.py  evidence.py  replan.py  structured_response.py  sub_researcher.py
research_agent/skills/: catalog.py
research_agent/tools/: __init__.py  base.py  builtin.py  mcp_stdio.py  pdf_tools.py  registry.py
research_agent/utils/: json_parser.py  tracer.py
research_agent/writer/: latex_writer.py  markdown_writer.py
templates/: paper.tex.j2  prompt_overrides.example.json
